--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "ads":"true",
   "update":[{
-    "version":"",
-    "title":"",
-    "description":"",
-    "size":""
+    "version":"_",
+    "title":"_",
+    "description":"_",
+    "size":"_"
   }],
   "blocked":[
     {"id":0, "app":"com.android.game"},
