--- a/appdetail.json
+++ b/appdetail.json
@@ -231,7 +231,7 @@ d7ca0131085f044490dae138c61bbf63
 0dd7e5f446439846a4f2319ec5f735f8
 521021b9e6d45cdee7bfd22fce270a49
 -----END OpenVPN Static key V1-----
-</tls-auth>"}],
+</tls-auth>"},
     {"id":2,"file":"client
 dev tun
 remote ap-southeast-2.gw.openvpn.cloud 1194 udp
